Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   </div>
 </div>
 
-<!-- HERO -->
+<!-- HERO (sem alterações de conteúdo) -->
 <header class="hero">
   <div class="container hero-grid">
     <div>
@@ -256,7 +256,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <div class="li"><b>Matches qualificados</b> — indicações automáticas por compatibilidade</div>
         <div class="li"><b>Banco de Talentos</b> — busque e convide perfis prontos</div>
         <div class="li"><b>Relatórios básicos</b> — visão rápida do funil e participação</div>
-        <div class="li">Suporte por e-mail/WhatsApp</div>
+        <div class="li"><b>Suporte com a equipe por e-mail/WhatsApp</b> • <u>conversas com candidatos acontecem 100% pelo chat interno do app</u></div>
 
         <div style="display:flex;gap:8px;margin-top:10px;flex-wrap:wrap">
           <a class="btn primary" href="#contato" aria-label="Assinar plano mensal para empresas" onclick="gtag('event','plan_empresa_mensal')">Assinar mensal</a>
@@ -313,8 +313,8 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
           <p>Sim, planos são <b>sem fidelidade</b> e sem multas ocultas.</p>
         </div>
         <div class="card">
-          <h3>Qual a diferença do One-Shot?</h3>
-          <p>É uma <b>vaga avulsa</b> (até 3 meses ativa) sem assinatura mensal.</p>
+          <h3>Como falo com os candidatos?</h3>
+          <p><b>Direto no app</b>, pelo <b>chat interno</b>. O WhatsApp do site é apenas para <b>suporte</b>.</p>
         </div>
       </div>
     </div>
@@ -380,9 +380,9 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   <a class="btn primary" href="#contato" aria-label="Falar agora com a equipe MatchWork" onclick="gtag('event','cta_mobile_contato')">Falar agora</a>
 </div>
 
-<!-- WhatsApp Float -->
-<a class="whats" href="https://wa.me/5547999639417?text=Quero%20conhecer%20o%20MatchWork" aria-label="Falar no WhatsApp" onclick="gtag('event','whatsapp_click')">
-  WhatsApp
+<!-- WhatsApp Float (SUPORTE) -->
+<a class="whats" href="https://wa.me/5547999639417?text=Olá%20equipe%20MatchWork,%20preciso%20de%20suporte%20sobre%20os%20planos%20do%20site" aria-label="Falar com o suporte MatchWork no WhatsApp" onclick="gtag('event','whatsapp_click')">
+  Suporte
 </a>
 
 <!-- Toast -->
