Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <a href="#como-funciona">Como funciona</a>
       <a href="#bemplus">Bem+Match</a>
       <a href="#planos">Planos</a>
-      <a class="btn primary" href="#contato" aria-label="Fale com a equipe MatchWork" onclick="gtag('event','cta_top_contato')">Falar agora</a>
+      <a class="btn primary" href="#contato" aria-label="Fale com a equipe MatchWork">Falar agora</a>
     </nav>
   </div>
 </div>
 
-<!-- HERO (sem alterações de conteúdo) -->
+<!-- HERO -->
 <header class="hero">
   <div class="container hero-grid">
     <div>
@@ -171,8 +171,8 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         e acompanhar tendências de <b>salários e cargos</b>.
       </p>
       <div style="display:flex;gap:10px;flex-wrap:wrap">
-        <a class="btn primary" href="#planos-empresas" aria-label="Ver planos para empresas" onclick="gtag('event','cta_empresa')">Sou empresa</a>
-        <a class="btn ghost" href="#planos-candidato" aria-label="Ver planos para candidatos/profissionais" onclick="gtag('event','cta_candidato')">Sou candidato/profissional</a>
+        <a class="btn primary" href="#planos-empresas" aria-label="Ver planos para empresas">Sou empresa</a>
+        <a class="btn ghost" href="#planos-candidato" aria-label="Ver planos para candidatos/profissionais">Sou candidato/profissional</a>
       </div>
     </div>
 
@@ -256,11 +256,11 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <div class="li"><b>Matches qualificados</b> — indicações automáticas por compatibilidade</div>
         <div class="li"><b>Banco de Talentos</b> — busque e convide perfis prontos</div>
         <div class="li"><b>Relatórios básicos</b> — visão rápida do funil e participação</div>
-        <div class="li"><b>Suporte com a equipe por e-mail/WhatsApp</b> • <u>conversas com candidatos acontecem 100% pelo chat interno do app</u></div>
+        <div class="li">Suporte por e-mail/WhatsApp</div>
 
         <div style="display:flex;gap:8px;margin-top:10px;flex-wrap:wrap">
-          <a class="btn primary" href="#contato" aria-label="Assinar plano mensal para empresas" onclick="gtag('event','plan_empresa_mensal')">Assinar mensal</a>
-          <a class="btn ghost" href="#contato" aria-label="Assinar plano anual para empresas" onclick="gtag('event','plan_empresa_anual')">Assinar anual</a>
+          <a class="btn primary" href="#contato" aria-label="Assinar plano mensal para empresas">Assinar mensal</a>
+          <a class="btn ghost" href="#contato" aria-label="Assinar plano anual para empresas">Assinar anual</a>
         </div>
 
         <div style="margin-top:10px;color:#787ea3;font-size:13px">
@@ -279,12 +279,18 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <div class="li"><b>Trilhas & Bem+Match</b> — evolução contínua e bem-estar</div>
 
         <div style="display:flex;gap:8px;margin-top:10px;flex-wrap:wrap">
-          <a class="btn primary" href="#contato" aria-label="Assinar plano mensal candidato" onclick="gtag('event','plan_candidato_mensal')">Assinar mensal</a>
-          <a class="btn ghost" href="#contato" aria-label="Assinar plano anual candidato" onclick="gtag('event','plan_candidato_anual')">Assinar anual</a>
+          <a class="btn primary" href="#contato" aria-label="Assinar plano mensal candidato">Assinar mensal</a>
+          <a class="btn ghost" href="#contato" aria-label="Assinar plano anual candidato">Assinar anual</a>
         </div>
 
         <div style="margin-top:10px;color:#787ea3;font-size:13px">
           <b>Ideal para:</b> acelerar convites, crescer na carreira e acompanhar o mercado.
+        </div>
+
+        <!-- NOVO: clareza do gratuito x Premium -->
+        <div style="margin-top:12px;color:#787ea3;font-size:13px">
+          <b>Conta gratuita inclui:</b> cadastro, testes vocacionais, acesso a vagas e Bem+Match básico.<br>
+          <b>Conta Premium:</b> destaque em buscas, relatórios de carreira e trilhas completas.
         </div>
       </div>
 
@@ -296,29 +302,29 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
           Vaga ativa <b>até preencher</b> (máx. 3 meses) • indicações automáticas de compatíveis • <b>sem multa de cancelamento</b>
         </p>
         <div class="li"><b>Use quando:</b> precisa testar o fluxo ou preencher uma única posição com agilidade</div>
-        <a class="btn primary" href="#contato" aria-label="Publicar vaga única One-Shot" style="margin-top:10px" onclick="gtag('event','plan_empresa_one')">Publicar vaga única</a>
+        <a class="btn primary" href="#contato" aria-label="Publicar vaga única One-Shot" style="margin-top:10px">Publicar vaga única</a>
       </div>
     </div>
+  </div>
+</section>
 
-    <!-- FAQ ENXUTO -->
-    <div style="margin-top:40px">
-      <h3 style="text-align:center">Dúvidas frequentes</h3>
-      <div class="grid-3">
-        <div class="card">
-          <h3>Quanto tempo para primeiros candidatos?</h3>
-          <p>Em média, <b>&lt; 24h</b> para primeiros matches em pilotos.</p>
-        </div>
-        <div class="card">
-          <h3>Posso cancelar quando quiser?</h3>
-          <p>Sim, planos são <b>sem fidelidade</b> e sem multas ocultas.</p>
-        </div>
-        <div class="card">
-          <h3>Como falo com os candidatos?</h3>
-          <p><b>Direto no app</b>, pelo <b>chat interno</b>. O WhatsApp do site é apenas para <b>suporte</b>.</p>
-        </div>
+<!-- NOVA SEÇÃO: Segurança / LGPD -->
+<section class="section">
+  <div class="container">
+    <h2>Segurança e conformidade</h2>
+    <p class="sub">
+      O MatchWork segue as boas práticas da <b>LGPD</b> e mantém dados em ambiente seguro.
+    </p>
+    <div class="grid-2">
+      <div class="card">
+        <h3>Para empresas</h3>
+        <p>Proteção de dados sensíveis, controle de acessos e conformidade com a legislação brasileira.</p>
+      </div>
+      <div class="card">
+        <h3>Para candidatos</h3>
+        <p>Seus dados são usados apenas para fins de matching e nunca compartilhados sem autorização.</p>
       </div>
     </div>
-
   </div>
 </section>
 
@@ -345,7 +351,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <p class="sub">Seja empresa, candidato ou profissional já empregado, envie sua mensagem.</p>
 
     <!-- FormSubmit: envia direto para seu e-mail -->
-    <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST" class="form" aria-label="Formulário de contato" onsubmit="gtag('event','form_submit')">
+    <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST" class="form" aria-label="Formulário de contato">
       <input class="input" name="nome" placeholder="Seu nome" required aria-label="Seu nome">
       <input class="input" type="email" name="email" placeholder="E-mail" required aria-label="Seu e-mail">
       <select class="input" name="perfil" required aria-label="Seu perfil">
@@ -376,13 +382,13 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 
 <!-- STICKY FOOTER CTA (mobile) -->
 <div class="sticky-cta">
-  <a class="btn ghost" href="#planos" aria-label="Ver planos" onclick="gtag('event','cta_mobile_planos')">Ver planos</a>
-  <a class="btn primary" href="#contato" aria-label="Falar agora com a equipe MatchWork" onclick="gtag('event','cta_mobile_contato')">Falar agora</a>
+  <a class="btn ghost" href="#planos" aria-label="Ver planos">Ver planos</a>
+  <a class="btn primary" href="#contato" aria-label="Falar agora com a equipe MatchWork">Falar agora</a>
 </div>
 
-<!-- WhatsApp Float (SUPORTE) -->
-<a class="whats" href="https://wa.me/5547999639417?text=Olá%20equipe%20MatchWork,%20preciso%20de%20suporte%20sobre%20os%20planos%20do%20site" aria-label="Falar com o suporte MatchWork no WhatsApp" onclick="gtag('event','whatsapp_click')">
-  Suporte
+<!-- WhatsApp Float -->
+<a class="whats" href="https://wa.me/5547999639417?text=Quero%20conhecer%20o%20MatchWork" aria-label="Falar no WhatsApp">
+  WhatsApp
 </a>
 
 <!-- Toast -->
@@ -401,7 +407,6 @@ if(toggle && links){
     a.addEventListener('click', ()=>{
       links.classList.remove('open');
       toggle.setAttribute('aria-expanded','false');
-      gtag('event','nav_click', {label: a.getAttribute('href')});
     });
   });
 }
@@ -419,17 +424,6 @@ if(toggle && links){
     });
   }
 })();
-
-/* Eventos de visualização de seção (básico) */
-const onView = (id)=>{ try{ gtag('event','view_section',{section:id}); }catch(e){} };
-['o-que-faz','como-funciona','bemplus','planos','contato'].forEach(id=>{
-  const el = document.getElementById(id);
-  if(!el) return;
-  const io = new IntersectionObserver((entries)=>{
-    entries.forEach(e=>{ if(e.isIntersecting){ onView(id); io.disconnect(); } });
-  }, {threshold:0.5});
-  io.observe(el);
-});
 </script>
 </body>
 </html>
