--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 .lead{font-size:18px;color:var(--muted);max-width:720px;margin:0 0 20px}
 
 /* MOCKUP (imagem final) — responsivo e proporcional */
-.mockup{
-  display:flex;justify-content:center;align-items:center;
-  margin-top:12px;
-}
+.mockup{display:flex;justify-content:center;align-items:center;margin-top:12px}
 .mockup img{
   width: min(34vw, 400px);
   max-width: 100%;
@@ -108,9 +105,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 .sticky-cta a{flex:1;text-align:center}
 
 /* WhatsApp Float */
-.whats{position:fixed;right:14px;bottom:96px;z-index:60;
-       background:#25D366;color:#fff;border-radius:999px;
-       padding:12px 16px;font-weight:800;box-shadow:0 8px 24px rgba(0,0,0,.2)}
+.whats{position:fixed;right:14px;bottom:96px;z-index:60;background:#25D366;color:#fff;border-radius:999px;padding:12px 16px;font-weight:800;box-shadow:0 8px 24px rgba(0,0,0,.2)}
 
 /* Toast */
 #toast{
@@ -120,7 +115,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   display:none;z-index:999;font-size:15px;
 }
 
-/* MOBILE ajustes extras */
+/* MOBILE */
 @media (max-width:980px){
   .hero-grid{grid-template-columns:1fr}
   .mockup img{ width: min(86vw, 330px); }
@@ -239,6 +234,34 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   </div>
 </section>
 
+<!-- GAMIFICAÇÃO (reposta) -->
+<section id="gamificacao" class="section">
+  <div class="container">
+    <h2>Gamificação (MatchPoints)</h2>
+    <p class="sub">Pontos simples para incentivar evolução contínua dos candidatos e sinalizar engajamento para as empresas.</p>
+    <div class="grid-2">
+      <div class="card">
+        <h3>Como ganhar</h3>
+        <ul style="margin:0;padding-left:18px">
+          <li>Completar perfil e testes iniciais</li>
+          <li>Aplicar e comparecer a entrevistas</li>
+          <li>Concluir módulos das trilhas</li>
+          <li>Manter streaks semanais de aprendizado</li>
+          <li>Dar/receber feedbacks</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Como usar</h3>
+        <ul style="margin:0;padding-left:18px">
+          <li>Destaque no app</li>
+          <li>Acesso a conteúdos e microcertificações</li>
+          <li>Benefícios do Bem+Match</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- PLANOS -->
 <section id="planos" class="section">
   <div class="container">
@@ -251,18 +274,15 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <div class="price-title"><h3 style="margin:0">Empresas — Assinatura</h3></div>
         <div class="price"><span class="amount">R$150</span><span class="small">/mês</span></div>
         <p class="subprice">ou <b>R$1.500/ano</b> (ganhe 2 meses)</p>
-
         <div class="li"><b>Publicações ilimitadas</b> — abra e feche quantas vagas precisar</div>
         <div class="li"><b>Matches qualificados</b> — indicações automáticas por compatibilidade</div>
         <div class="li"><b>Banco de Talentos</b> — busque e convide perfis prontos</div>
         <div class="li"><b>Relatórios básicos</b> — visão rápida do funil e participação</div>
         <div class="li">Suporte por e-mail/WhatsApp</div>
-
         <div style="display:flex;gap:8px;margin-top:10px;flex-wrap:wrap">
           <a class="btn primary" href="#contato" aria-label="Assinar plano mensal para empresas">Assinar mensal</a>
           <a class="btn ghost" href="#contato" aria-label="Assinar plano anual para empresas">Assinar anual</a>
         </div>
-
         <div style="margin-top:10px;color:#787ea3;font-size:13px">
           <b>Ideal para:</b> fluxo contínuo de vagas e banco de talentos sempre ativo.
         </div>
@@ -273,21 +293,17 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <div class="price-title"><h3 style="margin:0">Candidatos & Profissionais — Premium</h3></div>
         <div class="price"><span class="amount">R$14,90</span><span class="small">/mês</span></div>
         <p class="subprice">ou <b>R$149/ano</b> (2 meses de bônus)</p>
-
         <div class="li"><b>Destaque nas buscas</b> — apareça antes para as empresas</div>
         <div class="li"><b>Relatório de carreira</b> — pontos fortes e recomendações</div>
         <div class="li"><b>Trilhas & Bem+Match</b> — evolução contínua e bem-estar</div>
-
         <div style="display:flex;gap:8px;margin-top:10px;flex-wrap:wrap">
           <a class="btn primary" href="#contato" aria-label="Assinar plano mensal candidato">Assinar mensal</a>
           <a class="btn ghost" href="#contato" aria-label="Assinar plano anual candidato">Assinar anual</a>
         </div>
-
         <div style="margin-top:10px;color:#787ea3;font-size:13px">
           <b>Ideal para:</b> acelerar convites, crescer na carreira e acompanhar o mercado.
         </div>
-
-        <!-- NOVO: clareza do gratuito x Premium -->
+        <!-- Clareza do gratuito x Premium -->
         <div style="margin-top:12px;color:#787ea3;font-size:13px">
           <b>Conta gratuita inclui:</b> cadastro, testes vocacionais, acesso a vagas e Bem+Match básico.<br>
           <b>Conta Premium:</b> destaque em buscas, relatórios de carreira e trilhas completas.
@@ -308,13 +324,11 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   </div>
 </section>
 
-<!-- NOVA SEÇÃO: Segurança / LGPD -->
+<!-- Segurança / LGPD -->
 <section class="section">
   <div class="container">
     <h2>Segurança e conformidade</h2>
-    <p class="sub">
-      O MatchWork segue as boas práticas da <b>LGPD</b> e mantém dados em ambiente seguro.
-    </p>
+    <p class="sub">O MatchWork segue as boas práticas da <b>LGPD</b> e mantém dados em ambiente seguro.</p>
     <div class="grid-2">
       <div class="card">
         <h3>Para empresas</h3>
@@ -350,7 +364,6 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <h2 style="text-align:center">Fale com a gente</h2>
     <p class="sub">Seja empresa, candidato ou profissional já empregado, envie sua mensagem.</p>
 
-    <!-- FormSubmit: envia direto para seu e-mail -->
     <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST" class="form" aria-label="Formulário de contato">
       <input class="input" name="nome" placeholder="Seu nome" required aria-label="Seu nome">
       <input class="input" type="email" name="email" placeholder="E-mail" required aria-label="Seu e-mail">
@@ -363,7 +376,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       </select>
       <textarea class="input" name="mensagem" rows="4" placeholder="Sua mensagem" required aria-label="Sua mensagem"></textarea>
 
-      <!-- opções do FormSubmit -->
+      <!-- FormSubmit options -->
       <input type="hidden" name="_subject" value="Novo contato — Site MatchWork">
       <input type="hidden" name="_template" value="box">
       <input type="hidden" name="_captcha" value="false">
