--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   </div>
 </section>
 
-<!-- GAMIFICAÇÃO (reposta) -->
+<!-- GAMIFICAÇÃO -->
 <section id="gamificacao" class="section">
   <div class="container">
     <h2>Gamificação (MatchPoints)</h2>
@@ -269,7 +269,20 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <p class="sub">Escolha o formato ideal. Sem burocracia, sem multa escondida.</p>
 
     <div class="pricing">
-      <!-- Empresas -->
+      <!-- NOVO: Empresas — Gratuito -->
+      <div id="planos-empresas-gratuito" class="price-card">
+        <div class="price-title"><h3 style="margin:0">Empresas — Gratuito (Degustação)</h3></div>
+        <div class="price"><span class="amount">R$0</span><span class="small">/mês</span></div>
+        <p class="subprice">1 vaga por <b>7 dias</b> • ver até <b>5</b> candidatos compatíveis</p>
+        <div class="li">Sem Banco de Talentos • Sem relatórios</div>
+        <div class="li">Sem suporte dedicado</div>
+        <a class="btn ghost" href="#contato" aria-label="Testar grátis como empresa" style="margin-top:10px">Testar grátis</a>
+        <div style="margin-top:10px;color:#787ea3;font-size:13px">
+          <b>Para conhecer o fluxo</b> sem custo. <br>Precisa de profundidade? Use One-Shot ou Assinatura.
+        </div>
+      </div>
+
+      <!-- Empresas — Assinatura -->
       <div id="planos-empresas" class="price-card">
         <div class="price-title"><h3 style="margin:0">Empresas — Assinatura</h3></div>
         <div class="price"><span class="amount">R$150</span><span class="small">/mês</span></div>
@@ -319,6 +332,9 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         </p>
         <div class="li"><b>Use quando:</b> precisa testar o fluxo ou preencher uma única posição com agilidade</div>
         <a class="btn primary" href="#contato" aria-label="Publicar vaga única One-Shot" style="margin-top:10px">Publicar vaga única</a>
+        <div style="margin-top:10px;color:#787ea3;font-size:13px">
+          <b>Importante:</b> o plano gratuito é apenas degustação (7 dias/5 perfis). Para recrutamento completo de 1 vaga sem limites, use o <b>One-Shot</b>.
+        </div>
       </div>
     </div>
   </div>
