--- a/index.html
+++ b/index.html
@@ -268,21 +268,44 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <h2>Planos focados em preencher vagas e evoluir carreiras</h2>
     <p class="sub">Escolha o formato ideal. Sem burocracia, sem multa escondida.</p>
 
-    <div class="pricing">
-      <!-- NOVO: Empresas — Gratuito -->
-      <div id="planos-empresas-gratuito" class="price-card">
-        <div class="price-title"><h3 style="margin:0">Empresas — Gratuito (Degustação)</h3></div>
-        <div class="price"><span class="amount">R$0</span><span class="small">/mês</span></div>
-        <p class="subprice">1 vaga por <b>7 dias</b> • ver até <b>5</b> candidatos compatíveis</p>
-        <div class="li">Sem Banco de Talentos • Sem relatórios</div>
-        <div class="li">Sem suporte dedicado</div>
-        <a class="btn ghost" href="#contato" aria-label="Testar grátis como empresa" style="margin-top:10px">Testar grátis</a>
-        <div style="margin-top:10px;color:#787ea3;font-size:13px">
-          <b>Para conhecer o fluxo</b> sem custo. <br>Precisa de profundidade? Use One-Shot ou Assinatura.
+    <!-- COMPARATIVO RÁPIDO -->
+    <div class="card" style="margin-top:14px;border:1px solid var(--line);border-radius:14px;padding:14px;background:#fff">
+      <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:10px;align-items:start">
+        <div>
+          <div style="font-weight:800;color:#6f3aff;margin-bottom:6px">Gratuito (Degustação)</div>
+          <div style="font-size:14px;color:#464b63;line-height:1.4">
+            • 1 vaga por <b>7 dias</b><br>
+            • Ver até <b>5</b> candidatos compatíveis<br>
+            • <span style="opacity:.8">Sem Banco de Talentos / Relatórios</span><br>
+            ➜ Ideal: <b>testar o fluxo</b>
+          </div>
+        </div>
+        <div>
+          <div style="font-weight:800;color:#6f3aff;margin-bottom:6px">One-Shot (vaga única)</div>
+          <div style="font-size:14px;color:#464b63;line-height:1.4">
+            • Vaga ativa <b>até preencher</b> (máx. 3 meses)<br>
+            • Indicações ilimitadas de compatíveis<br>
+            • <span style="opacity:.8">Sem limite de visualizações</span><br>
+            ➜ Ideal: <b>preencher 1 vaga rápido</b>
+          </div>
+        </div>
+        <div>
+          <div style="font-weight:800;color:#6f3aff;margin-bottom:6px">Assinatura (empresas)</div>
+          <div style="font-size:14px;color:#464b63;line-height:1.4">
+            • <b>Vagas ilimitadas</b> o ano todo<br>
+            • <b>Banco de Talentos</b> e relatórios básicos<br>
+            • Suporte por e-mail/WhatsApp<br>
+            ➜ Ideal: <b>fluxo contínuo de vagas</b>
+          </div>
         </div>
       </div>
+    </div>
+    <p class="sub" style="margin-top:8px">
+      <b>Dica:</b> o Gratuito é degustação. Para <b>uma vaga completa</b>, escolha <b>One-Shot</b>. Para <b>várias vagas recorrentes</b>, vá de <b>Assinatura</b>.
+    </p>
 
-      <!-- Empresas — Assinatura -->
+    <div class="pricing">
+      <!-- Empresas -->
       <div id="planos-empresas" class="price-card">
         <div class="price-title"><h3 style="margin:0">Empresas — Assinatura</h3></div>
         <div class="price"><span class="amount">R$150</span><span class="small">/mês</span></div>
@@ -332,9 +355,6 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         </p>
         <div class="li"><b>Use quando:</b> precisa testar o fluxo ou preencher uma única posição com agilidade</div>
         <a class="btn primary" href="#contato" aria-label="Publicar vaga única One-Shot" style="margin-top:10px">Publicar vaga única</a>
-        <div style="margin-top:10px;color:#787ea3;font-size:13px">
-          <b>Importante:</b> o plano gratuito é apenas degustação (7 dias/5 perfis). Para recrutamento completo de 1 vaga sem limites, use o <b>One-Shot</b>.
-        </div>
       </div>
     </div>
   </div>
